some small additional information to chapter 2

--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -114,7 +114,7 @@ process
 really agile. Sometimes this led to situations where team members developed unnecessary complicated, in a wrong direction
 or not compatible with each other, which only got noticed a week later.
 
-Our projectteam was doing the meetings every monday for at least one hour. Most of the times we met at the same place, 
+Our projectteam was doing the meetings every Monday for at least one hour. Most of the times we met at the same place, 
 if due to appointment collisions we couldn't manage to meet in person, we met in Skype. So we never used to skip the 
 weekly meeting.
 
@@ -155,7 +155,7 @@ The following list is showing people who could be interested in using this appli
 \item ...
 \end{itemize}
 
-This people are mostly not it-specialists, so it is important to focus on it during the development of the application. This has an influence on the way they will use the application: it must be easy and naturally to use, the results must be easy to understand and reliable.
+These people are mostly not IT-specialists, so it is important to focus on it during the development of the application. This has an influence on the way they will use the application: it must be easy and naturally to use, the results must be easy to understand and reliable.
 
 \section{User roles}
 
@@ -186,8 +186,7 @@ The following points are showing the basic functionalities of the application.
 
 \subsection{Register}
 
-A person who want to use the application need to register first. It gets the abbility to do it, as soon as it opens the 
-start-page and hit the \enquote{Jetzt anmelden} link.
+A person who wants to use the application needs to register first. The person then gets the ability to do it, as soon as opening the start-page and clicking the \enquote{Jetzt anmelden} link.
 
 \begin{figure}[!ht]
   \centering
@@ -205,12 +204,12 @@ Below you see the register form which has to be filled.
   \label{fig:register1}
 \end{figure}
 
-Every entry here will be saved in the database.
+Every entry here will be saved in the database. Before the user can acutally login, a verification link sent to the email address, the user entered in the registration form, has to be opened. This prevents abuse and fake accounts at least a little.
 
 \subsection{Login}
 
 The login functionality is an easy to use form, which can be successfully used from every user which is already 
-registered. With a click of the "Einloggen" link, the login form will be visible.
+registered and verified. With a click on the "Einloggen" link, the login form will be visible.
 
 \begin{figure}[!ht]
   \centering
@@ -219,7 +218,7 @@ registered. With a click of the "Einloggen" link, the login form will be visible
   \label{fig:einloggen}
 \end{figure}
 
-The received login datas that are taken from the login form will be compared with the entries in the database, are the 
+The received login data that are taken from the login form will be compared with the entries in the database, are the 
 entries valid, the user has the right to use further functions in the application.
 
 \begin{figure}[!ht]
@@ -239,7 +238,7 @@ entries valid, the user has the right to use further functions in the applicatio
 \subsection{Files overview}
 
 The tab \enquote{Dateien} is showing the list of files which were added from an user. Not only shows it an overview it 
-also has several additionaly functions which can be processed for a file.
+also has several additionaly functions which can be processed on a file.
 
 \begin{figure}[!ht]
   \centering
