fixes some typos chapter 2

--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -312,8 +312,7 @@ After the function was fired the path to the file in the database and the file i
 
 \subsubsection{File upload}
 
-The file uploader is a important function, it gives the user the opportunity to upload data which he want to work on 
-it. Also has the user the opportunity to give the file a desired name.
+The file uploader is a important function, it gives the user the opportunity to upload data which he wants to work on. The user also has the opportunity to give the file a desired name.
 
 \begin{figure}[!ht]
   \centering
@@ -324,7 +323,7 @@ it. Also has the user the opportunity to give the file a desired name.
 
 \subsection{Parsed files overview}\label{sec:parse-file}
 
-So after a file was parsed with the parsed function from the \enquote{Dateien} section, it will be listed in the 
+So after a file was parsed with the parse function from the \enquote{Dateien} section, it will be listed in the 
 \enquote{Dokumente} tab.
 
 \subsubsection{Integration of detection plagiarism software}
@@ -334,7 +333,7 @@ It uses the application interface from the company \enquote{PlagAware}. This is 
 \enquote{PlagAware}.
 With the following symbol the \enquote{plag-detection} function can be used on the file.The detailed result report is 
 not to see on the application. But the user has the possibility to see it on the "PlagAware" page.The user can get 
-several informations on the application, like the success of the scanning and the procentaged part of the plagiarism.
+several informations on the application, like the success of the scanning and the percentaged part of plagiarism.
 
 \begin{figure}[!ht]
   \centering
@@ -422,8 +421,8 @@ between the user and the system.
 
 \subsection{Register}
 
-The not registered actor wants to use the application. To use the application he have to first register. Which includes 
-the follow steps:
+The not registered actor wants to use the application. To use the application he first has to register. Which includes 
+the following steps:
 
 
 \begin{itemize}
@@ -463,7 +462,7 @@ Condition: user registered.
 \subsection{File Upload}
 A user wants to upload a file.
 
-Condition: user logged in and opend the tab "Dateien".
+Condition: user logged in and opened the tab "Dateien".
 
 \begin{itemize}
 \item User clicks on the button "Datei hochladen".
