Changes in plagiarism.tex

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -124,3 +124,25 @@
    url = "http://www.plagiarism.org/plag_article_what_is_plagiarism.html",
    note = "[Online; accessed 27-March-2012]"
  }
+ 
+ @misc{
+ PAN'07
+ 
+ }
+ 
+ 
+ @misc{
+ plagiat 
+ }
+ 
+ @article{
+PAN'07, 
+ Journal = {Natural Language and Linguistic Theory}, 
+ Year = {1998}, 
+ Title = {Optimal questions}, 
+ Pages = {443-490}, 
+ Author = {Ackema, Peter and Neeleman, Ad}, 
+ Volume = {16}
+  }
+  
+  
