--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -2,7 +2,7 @@
 
 Here we will introduce you to the topics we encountered and researched in the beginning of the Unplagged project.
 
-\section{Plagiarism definition and history}
+\section{Plagiarism definition}
 
 % Das k√∂nnen wir meiner Meinung nach so nicht lassen, wir k√∂nnen doch nicht die Definition von Plagiat abschreiben..
 
@@ -21,77 +21,31 @@ is an act of fraud. It involves both stealing someone else's work and lying abou
 }
 \end{quote}
 
-%
-%---
-%Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
-%1
-%Plagiarism and Collusion Detection using the Smith-Waterman Algorithm
-%
-%----
-%
+The Community Standard for Undergraduates of the Duke University shows examples for the difference between intentional and unintentional Plagiarism:
 
-%
-%This definition suggests that there are two kinds of plagiarism: one that is committed with the intent to deceive (intentional plagiarism) and one resulting from the disregard for proper scholarly procedures (unintentional plagiarism).
-%1The Duke Community Standard in Practice: A Guide for Undergraduates 2011-12, Pages 18 and 20.
-%Examples of Intentional Plagiarism
-%
-%    Purchasing a pre-written paper (either by mail or electronically).
-%    Letting someone else write part or all of a paper for you.
-%    Paying someone else to write part or all of a paper for you.
-%    Submitting as your own someone else's unpublished work (including a computer program or algorithm), either with or without permission.
-%    Submitting as your own, work done jointly by a group in which you may have participated.
-%    Submitting work done by you, but for another class or another purpose without documenting that it was previously used.
-%    Creating phony citations.
-%
-%
-%Examples of Unintentional Plagiarism:
-%
-%    Failure to cite a source that is not common knowledge.
-%    Failure to "quote" or block quote author's exact words, even if documented.
-%    Failure to put a paraphrase in your own words, even if documented.
-%    Failure to put a summary in your own words, even if documented.
-%    Failure to be loyal to a source.
-%
-%
-%
-%\begin{itemize}
-%\item \textbf{Copy\&paste}
-%\item \textbf{Copy, shake\&paste}
-%\item \textbf{Patchwriting (rewording)}
-%\item \textbf{Structural plagiarism}
-%\item \textbf{Translations}
-%\end{itemize}
-%
-%
-%
-%
-%Kurze Definition und Begriffserklaerung 
-%Geschichtlicher Hintergrund: von den Roemern zu Wild usw. 	
-%	
-%	
-%	Twentieth-century dictionaries define plagiarism as "wrongful appropriation," "close imitation," or "purloining and publication," of another author's "language, thoughts, ideas, or expressions," and the representation of them as one's own original work,[1][2] but the notion remains problematic with nebulous boundaries.[3][4][5][6] There is no rigorous and precise distinction between imitation, stylistic plagiarism, copy, replica and forgery.[3][4][5][6]
-%
-%In the 1st century, the use of the Latin word plagiarius (literally kidnapper), to denote someone stealing someone else's work, was pioneered by Roman poet Martial, who complained that another poet had "kidnapped his verses." This use of the word was introduced into English in 1601 by dramatist Ben Jonson, to describe as a plagiary someone guilty of literary theft.[7][18]
-%
-%The derived form plagiarism was introduced into English around 1620.[19] The Latin plagi?rius, "kidnapper", and plagium, "kidnapping", has the root plaga ("snare", "net"), based on the Indo-European root *-plak, "to weave" (seen for instance in Greek plekein, Bulgarian "?????" pleta, Latin plectere, all meaning "to weave").
-%
-%The modern concept of plagiarism as immoral and originality as an ideal, emerged in Europe only in the 18th century, particularly with the Romantic movement.[7][11][12] Romantic aesthetic and ideology, still retains a significant strength in the 20th century, and encourages attaks against all that violates its values of genius, originality and individuality.[20] From the Romantic perspective, artistic techniques like parody are considered parasitic.[20] For centuries before, not only literature was considered "publica materies," a common property from which anybody could borrow at will, but the encouragement for authors and artists was actually to "copy the masters as closely as possible," for which the closer the copy the finer was considered the work.[7][8][13][21][22] This was the same in literature, music, painting and sculpture. In some cases, for a writer to invent their own plots was reproached as presumptuous.[7] This stood at the time of Shakespeare too, when it was common to appreciate more the similarity with an admired classical work, and the ideal was to avoid "unnecessary invention."[7][9][10]
-%
-%The modern ideals for originality and against plagiarism appeared in the 18th century, in the context of the economic and political history of the book trade, which will be exemplary and influential for the subsequent broader introduction of capitalism.[23] Originality, that traditionally had been deemed as impossible, was turned into an obligation by the emerging ideology of individualism.[10][13] In 1755 the word made it into Johnson's influential A Dictionary of the English Language, where he was cited in the entry for copier ("One that imitates; a plagiary; an imitator. Without invention a painter is but a copier, and a poet but a plagiary of others."), and in its own entry denoting both A thief in literature ("one who steals the thoughts or writings of another") and The crime of literary theft.[7][24]
-%
-%Later in the 18th century, the Romantic movement completed the transformation of the previous ideas about literature, developing the Romantic myth of artistic inspiration, which believes in the "individualised, inimitable act of literary creation", in the ideology of the "creation from nothingness" of a text which is an "autonomous object produced by an individual genious."[5][12][22][25][26][27][28] Plagiarism has often been used as a derogatory term for parodies.[29][30]
-%
-%Despite the 18th century new morals, and their current enforcement in the ethical codes of academia and journalism, the arts, by contrast, not only have resisted in their long-established tradition of copying as a fundamental practice of the creative process,[12][13][14][31] but with the boom of the modernist and postmodern movements, this practice has been accelerated, spread, increased, dramatically amplifyied to an unprecedented degree, to the point that has been heightened as the central and representative artistic device of these movements.[15][16][12] Plagiarism remains tolerated by 21st century artists.[13][14] An eraly rebuttal to Romantic aesthetic in this respect, came from Russian formalism.[20]
-%	
-%Entwicklung und gesellschaftliche Akzeptanz
-%	Anfang mit Gutenberg / Vroni Steuber usw.
-%
-%	Gesellschaftliche Probleme
-%	Universitaere Probleme
-%	
+\textbf{Intentional Plagiarism}
 
-%
-%	
+
+\begin{itemize}
+\item Purchasing a pre-written paper (either by mail or electronically).
+\item    Letting someone else write part or all of a paper for you.
+\item    Paying someone else to write part or all of a paper for you.
+\item    Submitting as your own someone else's unpublished work (including a computer program or algorithm), either with or without permission.
+\item    Submitting as your own, work done jointly by a group in which you may have participated.
+\item    Submitting work done by you, but for another class or another purpose without documenting that it was previously used.
+\item    Creating phony citations.
+\end{itemize}
+
+\textbf{Unintentional Plagiarism}
+\begin{itemize}
+\item Failure to cite a source that is not common knowledge.
+\item Failure to "quote" or block quote author's exact words, even if documented.
+\item Failure to put a paraphrase in your own words, even if documented.
+\item Failure to put a summary in your own words, even if documented.
+\item Failure to be loyal to a source.
+\end{itemize}
+
+
 	
 	
 \section{Basic Classification of Plagiarisms}
@@ -236,7 +190,7 @@ We found out that the most practical way is to combine both approaches - the fir
 
 (Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
 
-\subsection{Commercial software systems} 
+\section{Commercial software systems} 
 
  
  \begin{figure}[!h]
@@ -270,7 +224,7 @@ We used the top 5 "partially useful" software systems in this  benchmarking to o
 
 
 
-\subsubsection{PlagAware} 
+\subsection{PlagAware} 
  \begin{figure}[!h]
   \centering
   \fbox{
@@ -315,7 +269,7 @@ Figure Overview shows an overview of all fragments and the results of the plagia
 
 
 \newpage
-\subsubsection*{PlagAware Costs}
+\subsection*{PlagAware Costs}
 PlagAware has four different payment-models:
 \begin{enumerate}
 \item \textbf{Free}\\
@@ -367,7 +321,7 @@ In 2008 the system was placed at the 13th position. The reason of this change is
 \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
 
 
-\subsubsection*{Costs}
+\subsection*{Costs}
 There are different license models for the education sector and the cost depends on the amount of users . 
 
  \begin{figure}[!h]
@@ -386,7 +340,7 @@ There are different license models for the education sector and the cost depends
 
 \newpage
 
-\subsubsection{Ephorus}
+\subsection{Ephorus}
 
  \begin{figure}[!h]
   \centering
@@ -420,7 +374,7 @@ The third position in the HTW "Plagiarism Detection System Test" 2010 is Euphoru
 
 
 
-\subsubsection*{Ephorus costs}
+\subsection*{Ephorus costs}
 Not stated.
 
  \begin{figure}[!h]
@@ -445,7 +399,7 @@ Not stated.
 
 
 \newpage
-\subsubsection{PlagScan} 
+\subsection{PlagScan} 
 
  \begin{figure}[!h]
   \centering
@@ -531,7 +485,7 @@ PlagScan has four different payment-models without a contract:
 
 
 \newpage
-\subsubsection{Urkund}
+\subsection{Urkund}
 
  \begin{figure}[!h]
   \centering
@@ -580,18 +534,18 @@ Not stated.
 
 \newpage
 
-\subsubsection{Resume commercial software systems}
+\subsection{Resume commercial software systems}
 
 Although over the years there are more software detection systems that claim to check text reliable if it's plagiarism or not, but the quality of the systems decreases. 
 A big problem that some of the tested systems offer "ghostwriting".
 
-"In 2008 the systems fared slightly better on the test, but in 2010 many have lost the ability to detect plagiarisms that have been slightly edited - word orders switched, words dropped or added, or synonyms used. The best systems only reached a grade of C-, not quite reaching 70\% of the possible points.
+There are a quite a few differences between the benchmarking in 2008 and 2010, specially the ability to detect plagiarism in text which dropped and switched words. The best systems only reached 70\%.
 
-The 2010 test included not only short essays in German, but also ones in English and Japanese. Additionally, a usability metric was calculated that took into account aspects such as design, language consistency, navigation, print quality of the reports, and how well the system fits into the workflow of a university. A new professionalism metric includes giving a real street address and the name of a contact person; not advertising for paper mills or ghostwriting services; answering the phone during normal business hours and not installing malware on the computer under the guise of installing the detection software.
+The "Plagiat Team" updated the test with short essays in german, english and japanese.
+Also took aspects of design, language consistency, navigation and so on.
+They  categorized the systems in partially useful, barely useful, and useless for university purposes. The best systems between 60 and 70\% effectiveness were PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
 
-The systems were categorized as partially useful, barely useful, and useless for university purposes. The best systems with between 60 and 70\% effectiveness are PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
-
-Our recommendation: Only use these systems when suspicions of plagiarism arise that cannot be found with 3-5 words in a search machine. The focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. Most of the work involved later is in preparing a plagiarism case and dealing with the plagiator, and for this good documentation is needed. Very few systems provide good documentation." (plagiats)
+The recommendation of  the "Plagiat Team"  were that the focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. (plagiat webseite) 
 
 
 \section{Vroni Plag}
@@ -599,10 +553,6 @@ VroniPlag is a wiki platform which many volunteers, who are ready to give their 
 their books/resources etc. work on. They collaborate with each other in order to detect plagiarism in dissertations or
 habilitations.
 
-
-Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
-Der Gruender von VroniPlag ist Martin Heidingsfelder.	
-Das ist nicht genau bekannt, da man sich fuer eine Mitarbeit nicht anmelden muss. Es gab am 18.3.2012 6335 Seiten im Wiki, 189 verschiedene Accounts haben schon mal editiert, 21 Leute sind als Admins eingetragen, und es gibt 3 Buerokraten, die Rechte vergeben koennen. 
 
 
 VroniPlag is named after the first case which they published. The case was the one of Veronica Sa√ü.
@@ -682,12 +632,6 @@ to the university, where the dissertation is finished.
 Most of the work by VroniPlag is done by hand. For example collaborators could use Google to search for sources, 
 or they borrow books from the library and scan the texts. Generally there is no special software to help detect 
 plagiarism, but collaborator could feel free to choose some of the existing software to help work faster.
-
-\subsection{Pros \& Contras}
-%Es wird auch gezeigt, aus welchen Dokumentation der Text uebernommen wird. 
-%Ein Link zur originalen Quelle ist auch verfügbar. Außerdem gibt es noch Anmerkungen der Person, der den Sichtungsvermerk gemacht hat.
-%
-%Leider gibt es keine Markierung für die Plagiatstelle. Von daher kann man die Plagiatstelle nicht gleich ansehen, sondern erst den Text durchlesen, um die herauszufinden.3. andere  Links
 
 
 	 \begin{figure}[!h]
