biblio.bib changed

--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -21,7 +21,7 @@ is an act of fraud. It involves both stealing someone else's work and lying abou
 }
 \end{quote}
 
-The Community Standard for Undergraduates of the Duke University shows examples for the difference between intentional and unintentional Plagiarism:
+The Community Standard for Undergraduates of the \citet{DukeSite} University  shows examples for the difference between intentional and unintentional Plagiarism:
 
 \textbf{Intentional Plagiarism}
 
@@ -44,6 +44,8 @@ The Community Standard for Undergraduates of the Duke University shows examples 
 \item Failure to put a summary in your own words, even if documented.
 \item Failure to be loyal to a source.
 \end{itemize}
+
+
 
 
 	
@@ -238,13 +240,11 @@ We used the top 5 "partially useful" software systems in this  benchmarking to o
 \textbf{Plagaware Business Promotion}
 \begin{quote}
 "PlagAware is an online-service, which offers services around the topics Searching, finding, analysing and tracing of plagiarisms. The central element of PlagAware is a search engine, which is specialised in detecting identical contents of given texts. Contrary to the plagiarism scanning with classical search engines, the places of finding are not directly transferred to the user, but analysed on the rate and the type of analogy, before a message to the user is written. By this the differing result reports of PlagAware allow to recognise very fast the percentage and the distribution of the copied text contents, thus permitting an efficient and secure rating of a possible plagiarism."  
-\end{quote}
-\enquote{PlagAware Business Promotion}\citep{PlagAware Website} \href{http://www.plagaware.de}{PlagAware}
-
+\end{quote}\citep{PlagawareTest}
 
 
 PlagAware is software company from Ulm in Germany. The website is online for nearly 5 years and is the top-ranked system in the HTW "Plagiarism Detection System Test" 2010, but in fact it still detect only 61,11\% of the plagiarism cases. 
-Although PlagAware "produces excellent documentation of the plagiarism found, highlighting the commonalities in a side-by-side presentation. However, its usefulness at university is limited, as each file must be uploaded individually - no ZIP file or student-submission is possible. The system was not designed to be used in a university setting, but rather to find plagiarisms of online texts, which is important for sites trying to optimize their search machine ranking, as plagiarism will contribute to downranking." \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-05-plagaware/}{Plagiat Website}
+Although PlagAware "produces excellent documentation of the plagiarism found, highlighting the commonalities in a side-by-side presentation. However, its usefulness at university is limited, as each file must be uploaded individually - no ZIP file or student-submission is possible. The system was not designed to be used in a university setting, but rather to find plagiarisms of online texts, which is important for sites trying to optimize their search machine ranking, as plagiarism will contribute to downranking." \citep{PlagawareTest}
 
 Figure Overview shows an overview of all fragments and the results of the plagiarism detection. In figure Side-by-side shows a nice side-by-side fragment view, where all found plagiarisms are shown with different colors. Anomalies in the text are highlighted and the barcode-view is available.
  
@@ -280,7 +280,7 @@ EUR 2,99/month. 150 scans/month included. Every additional scan costs 2,0 ct. Mi
 EUR 7,49/month. 500 scans/month included. Every additional scan costs 1,5 ct. Mininum term of 6 month.
 \item \textbf{Premium}\\
 EUR 14,99/month. 1500 scans/month included. Every additional scan costs 1ct. Mininum term of 6 month.
-\end{enumerate}
+\end{enumerate}\citep{PlagawareTest}
 
 
 
@@ -306,7 +306,7 @@ Turnitin is a product by a company called iParadigms. It is a well-known US plag
 
 The best results can be achieved with material which is already in the database. 
 
-In the past the had a lot of problems to deal with umlauts, and having a complex setup. They improved a lot of parts especially the german translation. Still a big problem for european countries is the copyright policy of Turnitin. They still storing copies of user material in their database without a permission. \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
+In the past the had a lot of problems to deal with umlauts, and having a complex setup. They improved a lot of parts especially the german translation. Still a big problem for european countries is the copyright policy of Turnitin. They still storing copies of user material in their database without a permission. \citep{TurnitinTest}
 
  \begin{figure}[!h]
   \centering
@@ -317,8 +317,8 @@ In the past the had a lot of problems to deal with umlauts, and having a complex
   \label{fig:Turnitin overview}
 \end{figure}
  
-In 2008 the system was placed at the 13th position. The reason of this change is that the others systems have gotten worse. Turnitin has still problems of flagging spam sites especially when this sites are not safe for work (e.g. site with pornography content).(figure porn) On the other hand the search algorithm of Turnitin is storing sites in their database although they are still not exist.
-\href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
+In 2008 the system was placed at the 13th position. The reason of this change is that the others systems have gotten worse. Turnitin has still problems of flagging spam sites especially when this sites are not safe for work (e.g. site with pornography content) (figure porn). This is a problem when students uses school or university computers.
+On the other hand the search algorithm of Turnitin is storing sites in their database although they are still not exist.\citep{TurnitinTest}
 
 
 \subsection*{Costs}
@@ -355,8 +355,7 @@ There are different license models for the education sector and the cost depends
 \begin{quote}
 "Never search for plagiarism yourself again? An end to all irritations and qualitatively better papers? No problem. With Ephorus, you can prevent plagiarism with no extra effort. Moreover, with this anti-plagiarism market leader, you will be assured of the best service and the lowest prices. With Ephorus, teaching will be fun again! Would you like to try out Ephorus?
 \end{quote}
-\enquote{Ephorus Business Promotion}\citep{Euphorus Website} \href{http://www.ephorus.com}{Ephorus}
-
+\citep{EphorusTest}
 
 The third position in the HTW "Plagiarism Detection System Test" 2010 is Euphorus. It's a plagiarism detection system from the netherlands and the website is online for nearly 8 years.
 2007 it took the first place in the test, 2008 it was only position 8. Now they redisigned and reorganized the system and old problems were solved. The usability of reports and the whole handling of the system very good. (figure: report)But their still problems with umlauts and the european copyright problematic like in Turnitin. (figure: umlauts)
@@ -433,14 +432,14 @@ Not stated.
 \end{itemize}
 
 \end{quote}
-\enquote{Plagscan Business Promotion}\citep{Plagscan Website} \href{http://www.plagscan.com}{Plagscan}
+\enquote{Plagscan Business Promotion}\citep{PlagscanTest}
 
 Plagscan is a software company from Mainz, Germany. It placed at position number 4 in the HTW "Plagiarism Detection System Test" 2010. The website is online for 3 years and in the preview check 2008 it came to the 10th position.
 As a user you have to buy "Plag Points" (PP). One test costs 1 PP per 100 words. 
 The administrator sets up users and assigns them points for use.
 There are three different kinds of reports - a list of possible sources with links to click on, the submitted document with the suspicious areas linked to a possible source, and a docx file with the sources in comments.
 There's no side-by-side presentation, so it's not possible to compare the fragments.
-Although there are still problems, PlagScan was first place in usability, but only 8th place in overall effectiveness with only 60\% of the points awarded for finding plagiarisms.
+Although there are still problems, PlagScan was first place in usability, but only 8th place in overall effectiveness with only 60\% of the points awarded for finding plagiarisms.\citep{PlagscanTest}
 
 
  \begin{figure}[!h]
@@ -473,8 +472,7 @@ PlagScan has four different payment-models without a contract:
 2.000 Plagpoints - 200.000 words - 800 Sites. .
 \item \textbf{69 Euro}\\
 5.000 Plagpoints - 500.000 words - 2.000 Sites. 
-\end{enumerate}
-
+\end{enumerate}\citep{PlagscanTest}
 
 
 
@@ -503,11 +501,10 @@ PlagScan has four different payment-models without a contract:
 Today, URKUND is present in our neighbouring countries and continental Europe as well as the USA, Asia and the Middle East.
 
 URKUND is a natural part of the educational work of the academic world today. Both faculty and students are aware of the immediate and long term benefits of our system."
-\end{quote}\enquote{Urkund Business Promotion}\citep{Urkund Website} \href{http://www.urkund.com}{Urkund}
-
+\end{quote}\citep{UrkundTest}
 
 Urkund is the last system in our comparison of partially useful systems. It ranked at the 5th position in the HTW "Plagiarism Detection System Test" 2010. The company is from sweden and started their business in 2000. In this test it ranked high in effectiveness but on the other side it's not easy to use. It has problems in the translation and after the redesign 2008 the usability was going worse.
-Overall "the navigation is confusing, the layout at times catastrophic with texts overlapping fields,  the printed reports could be better, the error messages are cryptic, and the link descriptions are unclear."\enquote{Plagiat Team HTW}\citep{Plagiat Team HTW}
+Overall "the navigation is confusing, the layout at times catastrophic with texts overlapping fields,  the printed reports could be better, the error messages are cryptic, and the link descriptions are unclear."\citep{UrkundTest}
 
 
  \begin{figure}[!h]
@@ -545,7 +542,7 @@ The "Plagiat Team" updated the test with short essays in german, english and jap
 Also took aspects of design, language consistency, navigation and so on.
 They  categorized the systems in partially useful, barely useful, and useless for university purposes. The best systems between 60 and 70\% effectiveness were PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
 
-The recommendation of  the "Plagiat Team"  were that the focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. (plagiat webseite) 
+The recommendation of  the "Plagiat Team"  were that the focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. \citep{PlagiatTeam}
 
 
 \section{Vroni Plag}
