plagiarsm.tex changed

--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -540,9 +540,9 @@ There are a quite a few differences between the benchmarking in 2008 and 2010, s
 
 The "Plagiat Team" updated the test with short essays in german, english and japanese.
 Also took aspects of design, language consistency, navigation and so on.
-They  categorized the systems in partially useful, barely useful, and useless for university purposes. The best systems between 60 and 70\% effectiveness were PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
+They  categorized the systems in partially useful, barely useful, and useless for university purposes. The best systems between 60 and 70\% effectiveness were PlagAware, Turnitin, Ephorus, PlagScan and Urkund. \citep{PlagiatTeam} 
 
-The recommendation of  the "Plagiat Team"  were that the focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. \citep{PlagiatTeam}
+The recommendation of  the \citet{PlagiatTeam} were that the focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. 
 
 
 \section{Vroni Plag}
